changing the link for homepage

--- a/customers.html
+++ b/customers.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
     <img src="images/logo.png" alt="This is a picture of company logo" height="100px">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="contact_us.html">Contact Us</a>
     <a href="customers.html">Customers</a>
